Add profile and match pages

--- a/profile.html
+++ b/profile.html
@@ -60,6 +60,8 @@
 
             // Simulate saving profile
             document.getElementById("message").textContent = "Profile saved successfully as " + role + "!";
+            window.location.href = "match.html";
+
             this.reset();
         });
     </script>
